feat: google search optimization

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Portfolio website" />
+
+    <!-- google search optimization -->
+    <meta name="google-site-verification" content="google034bc727c81f7dd8" />
+    <!-- end google search optimization -->
+
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <!--
       manifest.json provides metadata used when your web app is installed on a
